# picoWeatherCollector

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  NOTICE.md  mosquitto.conf  package-lock.json  package.json  picoWeatherCollector.sh  server.js
.github/workflows/: build-and-push.yml
config/: db.js  mqtt.js
services/: dbService.js  mqttHandler.js
src/: CMakeLists.txt  types.h  weather_collector.c
src/database/: CMakeLists.txt  database.c  database.h
src/handlers/: CMakeLists.txt  handlers.c  handlers.h
src/pool/: CMakeLists.txt  pool.c  pool.h
src/utils/: CMakeLists.txt  utils.c  utils.h
